:sparkles: translate plugin for two languages

--- a/public/wp-content/themes/ripple/style.css
+++ b/public/wp-content/themes/ripple/style.css
@@ -656,7 +656,7 @@ a:active {
   text-decoration: none;
   top: 5px;
   width: auto;
-  z-index: 100000;
+  z-index: 6;
   /* Above WP toolbar. */
 }
 
@@ -974,6 +974,7 @@ body {
   max-width: 1170px;
   width: 100%;
   margin: 0 auto;
+  padding-right: 40px;
 }
 
 /*==========Navigation section open=================*/
@@ -1080,7 +1081,7 @@ body {
 .site-header .container {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -1102,7 +1103,7 @@ body {
 
 .site-header {
   width: 100%;
-  z-index: 99999;
+  z-index: 5;
   position: absolute;
   top: 0;
   background-color: transparent;
@@ -1268,7 +1269,7 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 99999;
+  z-index: 5;
   -webkit-transform: translateY(30px);
   -moz-transform: translateY(30px);
   -ms-transform: translateY(30px);
@@ -1327,7 +1328,7 @@ body {
   ul.sub-menu {
   left: -100%;
   top: 0;
-  z-index: 99999;
+  z-index: 5;
   visibility: hidden;
   opacity: 0;
   -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.2);
@@ -1521,7 +1522,7 @@ body {
   text-align: left;
   top: 52%;
   left: 0;
-  z-index: 99;
+  z-index: 2;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
@@ -1601,11 +1602,11 @@ body {
   position: absolute;
   bottom: 10%;
   right: 7%;
-  z-index: 999;
+  z-index: 4;
 }
 
 .slider-down-btn a {
-  z-index: 99;
+  z-index: 2;
 }
 
 #plx-slider-section .owl-nav .owl-prev,
@@ -3049,7 +3050,7 @@ body {
 #plx_contact_section .contact-us-section-wrap {
   margin-top: -200px !important;
   position: relative;
-  z-index: 666;
+  z-index: 3;
 }
 
 /*------footer-----*/
@@ -4024,17 +4025,42 @@ ol.comment-list {
   }
 }
 
-/* Uncomment php in header.php 
+/* Uncomment php in header.php */
+
+@media screen and (max-width: 600px) {
+  #wpadminbar {
+    position: fixed;
+  }
+}
+
 .prisna-gwt-align-left {
   display: none;
 }
 .prisna-gwt-flags-container {
-  margin: 2px;
-  background: #23282d;
+  position: fixed;
+  right: 10px;
+  height: 55px;
+  width: 25px;
   display: flex !important;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  z-index: 7;
+  background: center no-repeat
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25px' height='25px' viewBox='0 0 420 420' stroke='white' fill='none'%3E%3Cpath stroke-width='26' d='M209,15a195,195 0 1,0 2,0z'/%3E%3Cpath stroke-width='18' d='m210,15v390m195-195H15M59,90a260,260 0 0,0 302,0 m0,240 a260,260 0 0,0-302,0M195,20a250,250 0 0,0 0,382 m30,0 a250,250 0 0,0 0-382'/%3E%3C/svg%3E");
 }
+.prisna-gwt-flags-container li {
+  margin-bottom: 3px;
+  display: none;
+}
+.prisna-gwt-flags-container:hover {
+  height: 60px;
+  background: none;
+}
+.prisna-gwt-flags-container:hover li {
+  display: block;
+}
+
 .goog-te-banner-frame {
   display: none;
 }
@@ -4042,8 +4068,29 @@ body {
   top: 0 !important;
 }
 /* .site-header {
-    top: 15px !important;
+  top: 15px !important;
+}
+.scrollActive .site-header {
+  top: 0 !important;
+} */
+
+@media (max-width: 600px) {
+  .prisna-gwt-flags-container {
+    right: 0;
   }
-  .scrollActive .site-header {
-    top: 0 !important;
-  } */
+  .site-header .container {
+    padding-left: 10px;
+  }
+  #plx_service_section ul.service-tabs .service-title h5 {
+    visibility: hidden;
+  }
+}
+.logged-in.admin-bar .site-header {
+  margin-top: 0px;
+}
+.logged-in.admin-bar.scrollActive .site-header {
+  margin-top: 32px;
+}
+.logged-in.admin-bar.scrollActive .site-header .container {
+  align-items: center;
+}
